--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+	 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAL5CUihnsjTRJlwyaqy4lkMN9yzST4BCs"></script>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+
